# SBLA_in_sim

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: noise_dist.txt
examples/: example_config.ini
sbla_in_sim/: config.py  errors.py  line_fit_utils.py  line_profile_least_squares.py  random_rays.py  sbla_detection_utils.py  simulate_desi_noise.py  spectrum.py  utils.py
sbla_in_sim/scripts/: extract_random_rays.py  find_galaxy_angular_momentum.py  find_sblas.py  fit_absorption_lines.py
scripts/: extract_random_rays.py
