[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sbla_in_sim"
dynamic = ["version", "dependencies"]
description = "Extract random spectra from simulations to find SBLAs"
authors = [
    { name="Ignasi Pérez-Ràfols", email="iprafols@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
"extract_random_rays.py" = "sbla_in_sim.scripts.extract_random_rays:main"
"find_galaxy_angular_momentum.py" = "sbla_in_sim.scripts.find_galaxy_angular_momentum:main"
"fit_absorption_lines.py" = "sbla_in_sim.scripts.fit_absorption_lines:main"
"find_sblas.py" = "sbla_in_sim.scripts.find_sblas:main"

[tool.setuptools]
packages = ["sbla_in_sim", "sbla_in_sim.scripts"]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
version = {attr = "sbla_in_sim._version.__version__"}
dependencies = {file = ["requirements.txt"]}